src/objects/ACED_RightNow_Country__c.object
<CustomObject>
    <fields>
        <fullName>Cluster__c</fullName>
        <inlineHelpText>This is a helptext for Affilliate</inlineHelpText>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Console__c</fullName>
        <inlineHelpText>This is a helptext for Integration Console</inlineHelpText>
        <label>Integration Console</label>
        <referenceTo>ACED_Integration_Console__c</referenceTo>
        <relationshipLabel>RightNow Countries</relationshipLabel>
        <relationshipName>RightNow_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightNow_Service_URL__c</fullName>
        <inlineHelpText>This is a helptext for RightNow Service URL</inlineHelpText>
        <label>RightNow Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RightNow Country</label>
    <nameField>
        <displayFormat>RNC-{000000}</displayFormat>
        <label>Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RightNow Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>